# Hermes

./: .gitignore  README.md  readme.md  run_agent.sh
cpp_codes/STM32/: canopen.cpp  ibus.cpp  main.ino
cpp_codes/STM32/data/: asi.cpp  asi.h  canopen.cpp  canopen.h  hermes_test.ino
cpp_codes/encoder/: encoder.cpp
cpp_codes/remote_control/: flysky.cpp  teleop.cpp
hermes_ws/: frames_2024-06-10_14.59.52.gv  frames_2024-11-11_13.55.21.gv  frames_2024-11-11_14.19.54.gv  requirements.txt
hermes_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
hermes_ws/launch/: config.rviz  visualize_robot.launch.xml
hermes_ws/launch/visualize/: visualize_robot.launch.xml
hermes_ws/launch_files/: package.xml  setup.py
hermes_ws/launch_files/launch_files/: visualize_robot.launch.xml
hermes_ws/log/: latest_build
hermes_ws/runs/detect/train/: args.yaml
hermes_ws/runs/detect/train2/: args.yaml
hermes_ws/runs/detect/train3/: args.yaml
hermes_ws/runs/detect/train4/: args.yaml
hermes_ws/runs/detect/train5/: args.yaml
hermes_ws/runs/detect/train6/: args.yaml
hermes_ws/runs/detect/train7/: args.yaml  results.csv
hermes_ws/src/: package.xml
hermes_ws/src/bno055_driver/: package.xml  setup.cfg  setup.py
hermes_ws/src/cameras/: package.xml  setup.cfg  setup.py
hermes_ws/src/cmd_vel/: setup.cfg  setup.py
hermes_ws/src/gps_nav/: package.xml  setup.cfg  setup.py
hermes_ws/src/gps_publisher/: CMakeLists.txt  package.xml  setup.py
hermes_ws/src/hermes_interfaces/: CMakeLists.txt  package.xml
hermes_ws/src/hermes_nav/: package.xml  setup.cfg  setup.py
hermes_ws/src/hermes_nav/hermes_nav/: gps_converter_node.py
hermes_ws/src/hermes_nav/launch/: display.launch.py  dual_ekf_navsat.launch.py  gazebo_gps_world_hermes.launch.py  gps_waypoint_follower.launch.py  gps_waypoint_logger.py  launch_sim.launch.py  mapviz.launch.py  rsp.launch.py
hermes_ws/src/hermes_nav/params/: controllers.yaml  demo_waypoints.yaml  demo_waypoints2.yaml  dual_ekf_navsat_params.yaml  gps_wpf_demo.mvc  nav2_no_map_params.yaml
hermes_ws/src/hermes_navigation/: CMakeLists.txt
hermes_ws/src/hermes_urdf/: CMakeLists.txt  model.urdf
hermes_ws/src/icm20948_publisher/: package.xml  setup.cfg  setup.py
hermes_ws/src/imu_filter_madgwick/: CHANGELOG.rst
hermes_ws/src/imu_publisher/: setup.py
hermes_ws/src/imu_raw_publisher/: setup.py
hermes_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
hermes_ws/src/lidar_publisher/: setup.cfg  setup.py
hermes_ws/src/log/: latest_build
hermes_ws/src/multi_package_launcher/: setup.cfg  setup.py
hermes_ws/src/my_robot_description/: setup.py
hermes_ws/src/my_tf2_broadcaster/: setup.cfg  setup.py
hermes_ws/src/object_detection/: package.xml  setup.py
hermes_ws/src/odometry/: setup.py
hermes_ws/src/odometry_publisher/: package.xml  setup.cfg  setup.py
hermes_ws/src/odometry_publisher/odometry_publisher/: odometry_publisher_node.py
hermes_ws/src/path_creator/: package.xml  setup.cfg  setup.py
hermes_ws/src/robot_localization_pkg/: setup.cfg  setup.py
hermes_ws/src/robot_model/: package.xml  setup.py
hermes_ws/src/ros2_bno08x_driver/: package.xml  setup.cfg  setup.py
hermes_ws/src/sensor_reset/: package.xml  setup.cfg  setup.py
hermes_ws/src/sensor_reset/sensor_reset/: reset_node.py
hermes_ws/src/teleop_camera/: package.xml  setup.cfg  setup.py
hermes_ws/src/teleop_control/: setup.cfg  setup.py
hermes_ws/src/tof_publisher/: package.xml  setup.cfg  setup.py
hermes_ws/src/waypoint_follower/: package.xml  setup.cfg  setup.py
hermes_ws/src/waypoints/: waypoints.yaml
hermes_ws/src/wheel_joint_publisher_pkg/: package.xml  setup.cfg  setup.py
hermes_ws/urdf/: config.json  part_1.part  rehv1.part
main/: asi.cpp  asi.h  canopen.h  ibus.h  user_config.h
(+1088 files in other folders)
